extends Control

func _on_Sala1_pressed():
	get_tree().change_scene("res://Sales/Sala01.tscn")

func _on_Sala2_pressed():
	get_tree().change_scene("res://Sales/Sala02.tscn")



func _on_Sala1O_pressed():
	get_tree().change_scene("res://Sales/Sala01 Optimitzada.tscn")

func _on_Sala2O_pressed():
	get_tree().change_scene("res://Sales/Sala02 Optimitzada.tscn")
